force-app/main/default/objects/Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipName>Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>