force-app/main/default/objects/Answer__c/fields/Yes__c.field-meta.xml
<CustomField>
    <fullName>Yes__c</fullName>
    <label>Select</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>